fix bug of toggle dark mode on css

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -138,14 +138,19 @@ header nav i {
 .bx-menu:hover {
   transform: scale(1.08);
 }
+
 .main__container {
   display: flex;
+  opacity: 1;
+  background-color: red;
+}
+
+.dark__mode {
   background-color: blue;
 }
 
 .menu {
   margin-top: var(--h-nav__bar);
-  visibility: 1;
   opacity: 0;
   position: absolute;
 
@@ -160,7 +165,6 @@ header nav i {
 }
 
 .menu__hidden {
-  visibility: 0;
   opacity: 1;
   height: 100%;
 }
